[package]
name = "computer-control"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
cpal = "0.15"
whisper-rs = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
